p3/y.output
State 187 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: Cabecera_programa bloque

    2 bloque: LEFT_KEY inbloque RIGHT_KEY

    3 inbloque: Declar_de_variables_locales Declar_de_subprogs Sentencias
    4         | Declar_de_variables_locales Declar_de_subprogs

    5 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    6                   | %empty

    7 Declar_subprog: Cabecera_subprograma bloque

    8 Declar_de_variables_locales: INITVAR Variables_locales ENDVAR
    9                            | %empty

   10 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

   11 Variables_locales: Variables_locales Cuerpo_declar_variables
   12                  | Cuerpo_declar_variables

   13 Cuerpo_declar_variables: tipo list_id SEMICOLON
   14                        | error

   15 Cabecera_subprograma: tipo ID LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

   16 argumentos: argumentos COMA argumento
   17           | argumento
   18           | %empty
   19           | error

   20 argumento: tipo ID

   21 Sentencias: Sentencias Sentencia
   22           | Sentencia

   23 Sentencia: bloque
   24          | sentencia_contador
   25          | sentencia_asignacion
   26          | sentencia_if
   27          | sentencia_while
   28          | sentencia_entrada
   29          | sentencia_salida
   30          | sentencia_return
   31          | sentencia_for
   32          | sentencia_list

   33 sentencia_contador: PLUSPLUS expresion SEMICOLON
   34                   | MINUSMINUS expresion SEMICOLON
   35                   | expresion PLUSPLUS SEMICOLON
   36                   | expresion MINUSMINUS SEMICOLON

   37 sentencia_asignacion: ID ASSIGN expresion SEMICOLON

   38 sentencia_if: IF LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia
   39             | IF LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia ELSE Sentencia

   40 sentencia_while: WHILE LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS Sentencia

   41 sentencia_entrada: IN CADENA list_id SEMICOLON
   42                  | IN list_id SEMICOLON

   43 sentencia_salida: OUT list_expresiones_o_cadena SEMICOLON

   44 sentencia_return: RETURN expresion SEMICOLON

   45 sentencia_for: FOR ID ASSIGN_FOR constante TO constante DO bloque

   46 sentencia_list: expresion LIST_OP
   47               | DOLLAR expresion

   48 expresion: NEG expresion
   49          | COUNT expresion
   50          | QUEST expresion
   51          | SYMBOL_OP expresion
   52          | expresion SYMBOL_OP expresion
   53          | expresion BINARY_OP expresion
   54          | expresion BINARY_LIST_OP_I expresion
   55          | expresion BINARY_LIST_OP_L expresion
   56          | expresion AND_OP expresion
   57          | expresion OR_OP expresion
   58          | expresion XOR_OP expresion
   59          | expresion RELATION_OP expresion
   60          | expresion EQUALS_OP expresion
   61          | expresion AT expresion
   62          | expresion MINUSMINUS expresion
   63          | ID
   64          | constante
   65          | funcion
   66          | expresion PLUSPLUS expresion AT AT expresion
   67          | LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS
   68          | error

   69 funcion: ID LEFT_PARENTHESIS list_expresiones RIGHT_PARENTHESIS
   70        | ID LEFT_PARENTHESIS RIGHT_PARENTHESIS

   71 list_expresiones_o_cadena: list_expresiones_o_cadena COMA exp_cad
   72                          | exp_cad

   73 exp_cad: expresion
   74        | CADENA

   75 constante: CONST_INT
   76          | CONST_DOUBLE
   77          | CONST_CHAR
   78          | CONST_BOOLEAN
   79          | const_list_int
   80          | const_list_double
   81          | const_list_boolean
   82          | const_list_char

   83 list_expresiones: list_expresiones COMA expresion
   84                 | expresion

   85 tipo: tipo_elemental
   86     | LIST_OF tipo_elemental
   87     | LIST_OF LIST_OF tipo_elemental

   88 tipo_elemental: BASIC_TYPES

   89 const_list_int: LEFT_BRACKET list_int RIGHT_BRACKET

   90 list_int: list_int COMA CONST_INT
   91         | CONST_INT

   92 const_list_double: LEFT_BRACKET list_double RIGHT_BRACKET

   93 list_double: list_double COMA CONST_DOUBLE
   94            | CONST_DOUBLE

   95 const_list_boolean: LEFT_BRACKET list_boolean RIGHT_BRACKET

   96 list_boolean: list_boolean COMA CONST_BOOLEAN
   97             | CONST_BOOLEAN

   98 const_list_char: LEFT_BRACKET list_char RIGHT_BRACKET

   99 list_char: list_char COMA CONST_CHAR
  100          | CONST_CHAR

  101 list_id: list_id COMA ID
  102        | ID
  103        | error


Terminals, with rules where they appear

$end (0) 0
error (256) 14 19 68 103
MAIN (258) 10
RIGHT_PARENTHESIS (259) 10 15 38 39 40 67 69 70
LEFT_KEY (260) 2
RIGHT_KEY (261) 2
LEFT_BRACKET (262) 89 92 95 98
RIGHT_BRACKET (263) 89 92 95 98
SEMICOLON (264) 13 33 34 35 36 37 41 42 43 44
COMA (265) 16 71 83 90 93 96 99 101
ASSIGN (266) 37
IF (267) 38 39
THEN (268) 38 39
ELSE (269) 39
WHILE (270) 40
RETURN (271) 44
FOR (272) 45
ASSIGN_FOR (273) 45
TO (274) 45
DO (275) 45
OUT (276) 43
IN (277) 41 42
INITVAR (278) 8
ENDVAR (279) 8
LIST_OF (280) 86 87
BASIC_TYPES (281) 88
CADENA (282) 41 74
OR_OP (283) 57
AND_OP (284) 56
XOR_OP (285) 58
EQUALS_OP (286) 60
RELATION_OP (287) 59
SYMBOL_OP (288) 51 52
BINARY_OP (289) 53
BINARY_LIST_OP_I (290) 54
BINARY_LIST_OP_L (291) 55
NEG (292) 48
COUNT (293) 49
QUEST (294) 50
MINUSMINUS (295) 34 36 62
PLUSPLUS (296) 33 35 66
DOLLAR (297) 47
LIST_OP (298) 46
AT (299) 61 66
CONST_INT (300) 75 90 91
CONST_DOUBLE (301) 76 93 94
CONST_BOOLEAN (302) 78 96 97
CONST_CHAR (303) 77 99 100
ID (304) 15 20 37 45 63 69 70 101 102
LEFT_PARENTHESIS (305) 10 15 38 39 40 67 69 70


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Programa (52)
    on left: 1, on right: 0
bloque (53)
    on left: 2, on right: 1 7 23 45
inbloque (54)
    on left: 3 4, on right: 2
Declar_de_subprogs (55)
    on left: 5 6, on right: 3 4 5
Declar_subprog (56)
    on left: 7, on right: 5
Declar_de_variables_locales (57)
    on left: 8 9, on right: 3 4
Cabecera_programa (58)
    on left: 10, on right: 1
Variables_locales (59)
    on left: 11 12, on right: 8 11
Cuerpo_declar_variables (60)
    on left: 13 14, on right: 11 12
Cabecera_subprograma (61)
    on left: 15, on right: 7
argumentos (62)
    on left: 16 17 18 19, on right: 10 15 16
argumento (63)
    on left: 20, on right: 16 17
Sentencias (64)
    on left: 21 22, on right: 3 21
Sentencia (65)
    on left: 23 24 25 26 27 28 29 30 31 32, on right: 21 22 38 39 40
sentencia_contador (66)
    on left: 33 34 35 36, on right: 24
sentencia_asignacion (67)
    on left: 37, on right: 25
sentencia_if (68)
    on left: 38 39, on right: 26
sentencia_while (69)
    on left: 40, on right: 27
sentencia_entrada (70)
    on left: 41 42, on right: 28
sentencia_salida (71)
    on left: 43, on right: 29
sentencia_return (72)
    on left: 44, on right: 30
sentencia_for (73)
    on left: 45, on right: 31
sentencia_list (74)
    on left: 46 47, on right: 32
expresion (75)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67 68, on right: 33 34 35 36 37 38 39 40 44 46 47 48 49 50 51
    52 53 54 55 56 57 58 59 60 61 62 66 67 73 83 84
funcion (76)
    on left: 69 70, on right: 65
list_expresiones_o_cadena (77)
    on left: 71 72, on right: 43 71
exp_cad (78)
    on left: 73 74, on right: 71 72
constante (79)
    on left: 75 76 77 78 79 80 81 82, on right: 45 64
list_expresiones (80)
    on left: 83 84, on right: 69 83
tipo (81)
    on left: 85 86 87, on right: 13 15 20
tipo_elemental (82)
    on left: 88, on right: 85 86 87
const_list_int (83)
    on left: 89, on right: 79
list_int (84)
    on left: 90 91, on right: 89 90
const_list_double (85)
    on left: 92, on right: 80
list_double (86)
    on left: 93 94, on right: 92 93
const_list_boolean (87)
    on left: 95, on right: 81
list_boolean (88)
    on left: 96 97, on right: 95 96
const_list_char (89)
    on left: 98, on right: 82
list_char (90)
    on left: 99 100, on right: 98 99
list_id (91)
    on left: 101 102 103, on right: 13 41 42 101


State 0

    0 $accept: . Programa $end

    MAIN  shift, and go to state 1

    Programa           go to state 2
    Cabecera_programa  go to state 3


State 1

   10 Cabecera_programa: MAIN . LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 4


State 2

    0 $accept: Programa . $end

    $end  shift, and go to state 5


State 3

    1 Programa: Cabecera_programa . bloque

    LEFT_KEY  shift, and go to state 6

    bloque  go to state 7


State 4

   10 Cabecera_programa: MAIN LEFT_PARENTHESIS . argumentos RIGHT_PARENTHESIS

    error        shift, and go to state 8
    LIST_OF      shift, and go to state 9
    BASIC_TYPES  shift, and go to state 10

    RIGHT_PARENTHESIS  reduce using rule 18 (argumentos)
    COMA               reduce using rule 18 (argumentos)

    argumentos      go to state 11
    argumento       go to state 12
    tipo            go to state 13
    tipo_elemental  go to state 14


State 5

    0 $accept: Programa $end .

    $default  accept


State 6

    2 bloque: LEFT_KEY . inbloque RIGHT_KEY

    INITVAR  shift, and go to state 15

    $default  reduce using rule 9 (Declar_de_variables_locales)

    inbloque                     go to state 16
    Declar_de_variables_locales  go to state 17


State 7

    1 Programa: Cabecera_programa bloque .

    $default  reduce using rule 1 (Programa)


State 8

   19 argumentos: error .

    $default  reduce using rule 19 (argumentos)


State 9

   86 tipo: LIST_OF . tipo_elemental
   87     | LIST_OF . LIST_OF tipo_elemental

    LIST_OF      shift, and go to state 18
    BASIC_TYPES  shift, and go to state 10

    tipo_elemental  go to state 19


State 10

   88 tipo_elemental: BASIC_TYPES .

    $default  reduce using rule 88 (tipo_elemental)


State 11

   10 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos . RIGHT_PARENTHESIS
   16 argumentos: argumentos . COMA argumento

    RIGHT_PARENTHESIS  shift, and go to state 20
    COMA               shift, and go to state 21


State 12

   17 argumentos: argumento .

    $default  reduce using rule 17 (argumentos)


State 13

   20 argumento: tipo . ID

    ID  shift, and go to state 22


State 14

   85 tipo: tipo_elemental .

    $default  reduce using rule 85 (tipo)


State 15

    8 Declar_de_variables_locales: INITVAR . Variables_locales ENDVAR

    error        shift, and go to state 23
    LIST_OF      shift, and go to state 9
    BASIC_TYPES  shift, and go to state 10

    Variables_locales        go to state 24
    Cuerpo_declar_variables  go to state 25
    tipo                     go to state 26
    tipo_elemental           go to state 14


State 16

    2 bloque: LEFT_KEY inbloque . RIGHT_KEY

    RIGHT_KEY  shift, and go to state 27


State 17

    3 inbloque: Declar_de_variables_locales . Declar_de_subprogs Sentencias
    4         | Declar_de_variables_locales . Declar_de_subprogs

    $default  reduce using rule 6 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 28


State 18

   87 tipo: LIST_OF LIST_OF . tipo_elemental

    BASIC_TYPES  shift, and go to state 10

    tipo_elemental  go to state 29


State 19

   86 tipo: LIST_OF tipo_elemental .

    $default  reduce using rule 86 (tipo)


State 20

   10 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS .

    $default  reduce using rule 10 (Cabecera_programa)


State 21

   16 argumentos: argumentos COMA . argumento

    LIST_OF      shift, and go to state 9
    BASIC_TYPES  shift, and go to state 10

    argumento       go to state 30
    tipo            go to state 13
    tipo_elemental  go to state 14


State 22

   20 argumento: tipo ID .

    $default  reduce using rule 20 (argumento)


State 23

   14 Cuerpo_declar_variables: error .

    $default  reduce using rule 14 (Cuerpo_declar_variables)


State 24

    8 Declar_de_variables_locales: INITVAR Variables_locales . ENDVAR
   11 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error        shift, and go to state 23
    ENDVAR       shift, and go to state 31
    LIST_OF      shift, and go to state 9
    BASIC_TYPES  shift, and go to state 10

    Cuerpo_declar_variables  go to state 32
    tipo                     go to state 26
    tipo_elemental           go to state 14


State 25

   12 Variables_locales: Cuerpo_declar_variables .

    $default  reduce using rule 12 (Variables_locales)


State 26

   13 Cuerpo_declar_variables: tipo . list_id SEMICOLON

    error  shift, and go to state 33
    ID     shift, and go to state 34

    list_id  go to state 35


State 27

    2 bloque: LEFT_KEY inbloque RIGHT_KEY .

    $default  reduce using rule 2 (bloque)


State 28

    3 inbloque: Declar_de_variables_locales Declar_de_subprogs . Sentencias
    4         | Declar_de_variables_locales Declar_de_subprogs .
    5 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    error             shift, and go to state 36
    LEFT_KEY          shift, and go to state 6
    LEFT_BRACKET      shift, and go to state 37
    IF                shift, and go to state 38
    WHILE             shift, and go to state 39
    RETURN            shift, and go to state 40
    FOR               shift, and go to state 41
    OUT               shift, and go to state 42
    IN                shift, and go to state 43
    LIST_OF           shift, and go to state 9
    BASIC_TYPES       shift, and go to state 10
    SYMBOL_OP         shift, and go to state 44
    NEG               shift, and go to state 45
    COUNT             shift, and go to state 46
    QUEST             shift, and go to state 47
    MINUSMINUS        shift, and go to state 48
    PLUSPLUS          shift, and go to state 49
    DOLLAR            shift, and go to state 50
    CONST_INT         shift, and go to state 51
    CONST_DOUBLE      shift, and go to state 52
    CONST_BOOLEAN     shift, and go to state 53
    CONST_CHAR        shift, and go to state 54
    ID                shift, and go to state 55
    LEFT_PARENTHESIS  shift, and go to state 56

    RIGHT_KEY  reduce using rule 4 (inbloque)

    bloque                go to state 57
    Declar_subprog        go to state 58
    Cabecera_subprograma  go to state 59
    Sentencias            go to state 60
    Sentencia             go to state 61
    sentencia_contador    go to state 62
    sentencia_asignacion  go to state 63
    sentencia_if          go to state 64
    sentencia_while       go to state 65
    sentencia_entrada     go to state 66
    sentencia_salida      go to state 67
    sentencia_return      go to state 68
    sentencia_for         go to state 69
    sentencia_list        go to state 70
    expresion             go to state 71
    funcion               go to state 72
    constante             go to state 73
    tipo                  go to state 74
    tipo_elemental        go to state 14
    const_list_int        go to state 75
    const_list_double     go to state 76
    const_list_boolean    go to state 77
    const_list_char       go to state 78


State 29

   87 tipo: LIST_OF LIST_OF tipo_elemental .

    $default  reduce using rule 87 (tipo)


State 30

   16 argumentos: argumentos COMA argumento .

    $default  reduce using rule 16 (argumentos)


State 31

    8 Declar_de_variables_locales: INITVAR Variables_locales ENDVAR .

    $default  reduce using rule 8 (Declar_de_variables_locales)


State 32

   11 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce using rule 11 (Variables_locales)


State 33

  103 list_id: error .

    $default  reduce using rule 103 (list_id)


State 34

  102 list_id: ID .

    $default  reduce using rule 102 (list_id)


State 35

   13 Cuerpo_declar_variables: tipo list_id . SEMICOLON
  101 list_id: list_id . COMA ID

    SEMICOLON  shift, and go to state 79
    COMA       shift, and go to state 80


State 36

   68 expresion: error .

    $default  reduce using rule 68 (expresion)


State 37

   89 const_list_int: LEFT_BRACKET . list_int RIGHT_BRACKET
   92 const_list_double: LEFT_BRACKET . list_double RIGHT_BRACKET
   95 const_list_boolean: LEFT_BRACKET . list_boolean RIGHT_BRACKET
   98 const_list_char: LEFT_BRACKET . list_char RIGHT_BRACKET

    CONST_INT      shift, and go to state 81
    CONST_DOUBLE   shift, and go to state 82
    CONST_BOOLEAN  shift, and go to state 83
    CONST_CHAR     shift, and go to state 84

    list_int      go to state 85
    list_double   go to state 86
    list_boolean  go to state 87
    list_char     go to state 88


State 38

   38 sentencia_if: IF . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia
   39             | IF . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia ELSE Sentencia

    LEFT_PARENTHESIS  shift, and go to state 89


State 39

   40 sentencia_while: WHILE . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS Sentencia

    LEFT_PARENTHESIS  shift, and go to state 90


State 40

   44 sentencia_return: RETURN . expresion SEMICOLON

    error             shift, and go to state 36
    LEFT_BRACKET      shift, and go to state 37
    SYMBOL_OP         shift, and go to state 44
    NEG               shift, and go to state 45
    COUNT             shift, and go to state 46
    QUEST             shift, and go to state 47
    CONST_INT         shift, and go to state 51
    CONST_DOUBLE      shift, and go to state 52
    CONST_BOOLEAN     shift, and go to state 53
    CONST_CHAR        shift, and go to state 54
    ID                shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 56

    expresion           go to state 92
    funcion             go to state 72
    constante           go to state 73
    const_list_int      go to state 75
    const_list_double   go to state 76
    const_list_boolean  go to state 77
    const_list_char     go to state 78


State 41

   45 sentencia_for: FOR . ID ASSIGN_FOR constante TO constante DO bloque

    ID  shift, and go to state 93


State 42

   43 sentencia_salida: OUT . list_expresiones_o_cadena SEMICOLON

    error             shift, and go to state 36
    LEFT_BRACKET      shift, and go to state 37
    CADENA            shift, and go to state 94
    SYMBOL_OP         shift, and go to state 44
    NEG               shift, and go to state 45
    COUNT             shift, and go to state 46
    QUEST             shift, and go to state 47
    CONST_INT         shift, and go to state 51
    CONST_DOUBLE      shift, and go to state 52
    CONST_BOOLEAN     shift, and go to state 53
    CONST_CHAR        shift, and go to state 54
    ID                shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 56

    expresion                  go to state 95
    funcion                    go to state 72
    list_expresiones_o_cadena  go to state 96
    exp_cad                    go to state 97
    constante                  go to state 73
    const_list_int             go to state 75
    const_list_double          go to state 76
    const_list_boolean         go to state 77
    const_list_char            go to state 78


State 43

   41 sentencia_entrada: IN . CADENA list_id SEMICOLON
   42                  | IN . list_id SEMICOLON

    error   shift, and go to state 33
    CADENA  shift, and go to state 98
    ID      shift, and go to state 34

    list_id  go to state 99


State 44

   51 expresion: SYMBOL_OP . expresion

    error             shift, and go to state 36
    LEFT_BRACKET      shift, and go to state 37
    SYMBOL_OP         shift, and go to state 44
    NEG               shift, and go to state 45
    COUNT             shift, and go to state 46
    QUEST             shift, and go to state 47
    CONST_INT         shift, and go to state 51
    CONST_DOUBLE      shift, and go to state 52
    CONST_BOOLEAN     shift, and go to state 53
    CONST_CHAR        shift, and go to state 54
    ID                shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 56

    expresion           go to state 100
    funcion             go to state 72
    constante           go to state 73
    const_list_int      go to state 75
    const_list_double   go to state 76
    const_list_boolean  go to state 77
    const_list_char     go to state 78


State 45

   48 expresion: NEG . expresion

    error             shift, and go to state 36
    LEFT_BRACKET      shift, and go to state 37
    SYMBOL_OP         shift, and go to state 44
    NEG               shift, and go to state 45
    COUNT             shift, and go to state 46
    QUEST             shift, and go to state 47
    CONST_INT         shift, and go to state 51
    CONST_DOUBLE      shift, and go to state 52
    CONST_BOOLEAN     shift, and go to state 53
    CONST_CHAR        shift, and go to state 54
    ID                shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 56

    expresion           go to state 101
    funcion             go to state 72
    constante           go to state 73
    const_list_int      go to state 75
    const_list_double   go to state 76
    const_list_boolean  go to state 77
    const_list_char     go to state 78


State 46

   49 expresion: COUNT . expresion

    error             shift, and go to state 36
    LEFT_BRACKET      shift, and go to state 37
    SYMBOL_OP         shift, and go to state 44
    NEG               shift, and go to state 45
    COUNT             shift, and go to state 46
    QUEST             shift, and go to state 47
    CONST_INT         shift, and go to state 51
    CONST_DOUBLE      shift, and go to state 52
    CONST_BOOLEAN     shift, and go to state 53
    CONST_CHAR        shift, and go to state 54
    ID                shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 56

    expresion           go to state 102
    funcion             go to state 72
    constante           go to state 73
    const_list_int      go to state 75
    const_list_double   go to state 76
    const_list_boolean  go to state 77
    const_list_char     go to state 78


State 47

   50 expresion: QUEST . expresion

    error             shift, and go to state 36
    LEFT_BRACKET      shift, and go to state 37
    SYMBOL_OP         shift, and go to state 44
    NEG               shift, and go to state 45
    COUNT             shift, and go to state 46
    QUEST             shift, and go to state 47
    CONST_INT         shift, and go to state 51
    CONST_DOUBLE      shift, and go to state 52
    CONST_BOOLEAN     shift, and go to state 53
    CONST_CHAR        shift, and go to state 54
    ID                shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 56

    expresion           go to state 103
    funcion             go to state 72
    constante           go to state 73
    const_list_int      go to state 75
    const_list_double   go to state 76
    const_list_boolean  go to state 77
    const_list_char     go to state 78


State 48

   34 sentencia_contador: MINUSMINUS . expresion SEMICOLON

    error             shift, and go to state 36
    LEFT_BRACKET      shift, and go to state 37
    SYMBOL_OP         shift, and go to state 44
    NEG               shift, and go to state 45
    COUNT             shift, and go to state 46
    QUEST             shift, and go to state 47
    CONST_INT         shift, and go to state 51
    CONST_DOUBLE      shift, and go to state 52
    CONST_BOOLEAN     shift, and go to state 53
    CONST_CHAR        shift, and go to state 54
    ID                shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 56

    expresion           go to state 104
    funcion             go to state 72
    constante           go to state 73
    const_list_int      go to state 75
    const_list_double   go to state 76
    const_list_boolean  go to state 77
    const_list_char     go to state 78


State 49

   33 sentencia_contador: PLUSPLUS . expresion SEMICOLON

    error             shift, and go to state 36
    LEFT_BRACKET      shift, and go to state 37
    SYMBOL_OP         shift, and go to state 44
    NEG               shift, and go to state 45
    COUNT             shift, and go to state 46
    QUEST             shift, and go to state 47
    CONST_INT         shift, and go to state 51
    CONST_DOUBLE      shift, and go to state 52
    CONST_BOOLEAN     shift, and go to state 53
    CONST_CHAR        shift, and go to state 54
    ID                shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 56

    expresion           go to state 105
    funcion             go to state 72
    constante           go to state 73
    const_list_int      go to state 75
    const_list_double   go to state 76
    const_list_boolean  go to state 77
    const_list_char     go to state 78


State 50

   47 sentencia_list: DOLLAR . expresion

    error             shift, and go to state 36
    LEFT_BRACKET      shift, and go to state 37
    SYMBOL_OP         shift, and go to state 44
    NEG               shift, and go to state 45
    COUNT             shift, and go to state 46
    QUEST             shift, and go to state 47
    CONST_INT         shift, and go to state 51
    CONST_DOUBLE      shift, and go to state 52
    CONST_BOOLEAN     shift, and go to state 53
    CONST_CHAR        shift, and go to state 54
    ID                shift, and go to state 91
    LEFT_PARENTHESIS  shift, and go to state 56

    expresion           go to state 106
    funcion             go to state 72
    constante           go to state 73
    const_list_int      go to state 75
    const_list_double   go to state 76
    const_list_boolean  go to state 77
    const_list_char     go to state 78


State 51

   75 constante: CONST_INT .

    $default  reduce using rule 75 (constante)


State 52

   76 constante: CONST_DOUBLE .

    $default  reduce using rule 76 (constante)


State 53

   78 constante: CONST_BOOLEAN .

    $default  reduce using rule 78 (constante)


State 54

   77 constante: CONST_CHAR .

    $default  reduce using rule 77 (constante)


State 55

   37 sentencia_asignacion: ID . ASSIGN expresion SEMICOLON
   63 expresion: ID .
   69 funcion: ID . LEFT_PARENTHESIS list_expresiones RIGHT_PARENTHESIS
   70        | ID . LEFT_PARENTHESIS RIGHT_PARENTHESIS

    ASSIGN            shift, and go to state 107
    LEFT_PARENTHESIS  shift, and go to state 108

    $default  reduce using rule 63 (expresion)


State 56

   67 expresion: LEFT_PARENTHESIS . expresion RIGHT_PARENTHESIS
